--- a/ES6_basic/.gitignore
+++ b/ES6_basic/.gitignore
@@ -1,7 +1,7 @@
 # Ne pas ignorer README.md
 !README.md
-# Ignorer les fichiers main.c spécifiquement
-*main.c
+# Ignorer les fichiers main.js spécifiquement
+*main.js
 # Ignorer les fichiers de sortie générés par GCC
 *.exe
 # Ignorer les fichiers de sauvegarde de l'éditeur
